# opaq

./: .gitignore  Cargo.toml  OPAQ.md  README.md
canister/opaq-attestor/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  icp.yaml  opaq-attestor.did
canister/opaq-attestor/src/: evm.rs  evm_tx.rs  lib.rs  solana.rs  solana_tx.rs
ceremony/: README.md  transcript.md
circuits/: xburn_values.json
circuits/burn/: Nargo.toml
circuits/burn/src/: main.nr
circuits/deposit/: Nargo.toml
circuits/deposit/src/: main.nr
circuits/poseidon_check/: Nargo.toml
circuits/poseidon_check/src/: main.nr
circuits/transfer/: Nargo.toml
circuits/transfer/src/: main.nr
circuits/withdraw/: Nargo.toml
circuits/withdraw/src/: main.nr
circuits/xburn/: Nargo.toml
circuits/xburn/src/: main.nr
crates/common/: Cargo.toml
crates/common/src/: lib.rs  nullifier.rs  tree.rs  viewkey.rs
crates/groth16-verify/: Cargo.toml
crates/groth16-verify/src/: lib.rs
crates/groth16-verify/tests/: verify.rs
crates/groth16-verify/tests/fixtures/deposit/: proof.json  public.json  verification_key.json
crates/prover/: Cargo.toml
crates/prover/src/: main.rs  warn.rs
deploy/: devnet-latest.json
evm/: foundry.toml  gen_fixture.mjs  mint.mjs
evm/src/: OpaqMint.sol  OpaqPool.sol  PoseidonT2.sol  PoseidonT3.sol  PoseidonT5.sol
evm/test/: OpaqMint.t.sol  OpaqPool.t.sol  Poseidon.t.sol
programs/cu-probe/: Cargo.toml
programs/cu-probe/src/: lib.rs
programs/groth16-verify-check/: Cargo.toml
programs/groth16-verify-check/src/: lib.rs
programs/opaq/: Cargo.toml
programs/opaq/src/: lib.rs  tree_consts.rs  vk_burn.rs  vk_deposit.rs  vk_transfer.rs  vk_withdraw.rs  vk_xburn.rs
programs/poseidon-syscall-check/: Cargo.toml
programs/poseidon-syscall-check/src/: lib.rs
programs/rplace/: Cargo.toml
programs/rplace/src/: lib.rs
programs/tamagotchi/: Cargo.toml
programs/tamagotchi/src/: lib.rs
scripts/: ceremony-fetch-ptau.sh  ceremony-phase2.sh  ceremony-verify.sh  ceremony.sh  check-versions.sh  fun-demo.sh  groth16-prove-note.sh  groth16-prove.sh  groth16-setup.sh  m0-onchain.sh  m05-cu.sh  m10-zero-infra.sh  m11-devnet.sh  m12-transfer.sh  m13-transfer-cli.sh  m14-burn.sh  m15-evm-mint.sh  m16-burn-cli.sh  m17-evm-mint-e2e.sh  m18-roundtrip.sh  m19-mint-from-xburn.sh  m20-symmetric-roundtrip.sh  m21-view-key-discovery.sh  m3-onchain.sh  m8-e2e.sh  p4.2-opaqpool.sh  p5.2-solana-fixture.sh  prove.sh  test5-ringbuffer.sh
tests/: fun_demo.mjs  list_unspent.mjs  m05_cu.mjs  m0_syscall.mjs  m10_zero_infra.mjs  m11_devnet_demo.mjs  m12_transfer.mjs  m13_transfer_cli.mjs  m14_burn.mjs  m16_burn_cli.mjs  m18_roundtrip.mjs  m19_mint_from_xburn.mjs  m20_symmetric_roundtrip.mjs  m21_view_key_discovery.mjs  m3_onchain.mjs  m8_e2e.mjs  p5_2_fixture.mjs  p5_2_write_fixture.mjs  package-lock.json  package.json  read_leaves.mjs  read_path.mjs  recipient_history.mjs  submit_burn.mjs  submit_deposit.mjs  submit_transfer.mjs  submit_withdraw.mjs  test5_ringbuffer.mjs
tools/noir-groth16/: README.md  beta22-port.patch  setup.sh
