[package]
name = "opaq-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
light-poseidon.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
solana-poseidon.workspace = true
hex.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
rand_core.workspace = true
