# Standalone workspace (own lockfile) so groth16-solana's solana-bn254="2" pin
# stays isolated from the main workspace's solana 3.x deps.
[workspace]

[package]
name = "groth16-verify"
version = "0.1.0"
edition = "2021"
license = "MIT"

# M3 (OPAQ.md B.6): convert snarkjs (BN254) Groth16 proofs/vk to the byte layout
# Light Protocol's groth16-solana expects, and verify them with the same crate
# used on-chain. Validates the conversion off-chain before the validator deploy.
[dependencies]
groth16-solana = "0.2"
ark-bn254 = "0.5"
ark-ff = "0.5"
serde_json = "1"
